laget en side til min nettside

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,4 +3,7 @@
         background-color: palevioletred;
         font-family: Arial, Helvetica, sans-serif;
     }
+    h1{
+        text-decoration: underline;
+    }
 }
