--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,9 @@
 *{
     body{
         background-color: rgb(252, 234, 212);
-        font-family:Arial, Helvetica, sans-serif;
+        font-family: 'Open Sans', sans-serif;
+        font-family: 'Roboto', sans-serif;
+        font-family: 'Tilt Neon', sans-serif;
         
     }
     h1{
